[project]
name = "dfax"
version = "0.1.9"
description = "Python library for modeling DFAs, Moore Machines, and Transition Systems in JAX."
authors = [
    { name = "Beyazit Yalcinkaya", email = "beyazit@berkeley.edu" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax[cuda]>=0.4.38",
    "chex>=0.1.90",
    "flax>=0.10.4",
    "dfa>=4.7.1",
    "networkx==3.4.2",
    "matplotlib==3.10.7",
    "jaxlib==0.4.38",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
